# dd-cc-setup

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml  todo.md
.claude/: settings.json  settings.local.json
.claude/commands/: hook-health-check.md
config/: mappings.json
docker/: Dockerfile.e2e  docker-compose.e2e.yml
docs/: previous_desinged_system.md
docs/superpowers/specs/: 2026-03-25-action-capture-and-mapping-design.md
hooks/: test-stdin-dump.sh
scripts/: engine.py  models.py  redact.py  run-e2e.sh  transcript.py
scripts/analyze/: __main__.py  aggregator.py  classifiers.py  parser.py  posttooluse.py  r6_main.py  report.py
scripts/capture/: logger.py
scripts/categorise/: classifier.py  router.py
scripts/matchers/: __init__.py  base.py
scripts/observatory/: app.py
scripts/observatory/data/: filters.py  health_checks.py  parser.py  tool_categories.py  transcript_loader.py
scripts/observatory/pages/: dashboard.py
scripts/observatory/reports/f1_turn_cost/: __init__.py  compute.py  page.py
scripts/observatory/reports/f2_cache_miss/: compute.py  page.py
scripts/observatory/widgets/: __init__.py  health_check_form.py
scripts/observe/: logger.py
scripts/routing/: handlers.py
scripts/steps/: __init__.py  base.py
templates/: tmp_CLAUDE.md
tests/: conftest.py  test_aggregator.py  test_analyze_main.py  test_capture_logger.py  test_classifier.py  test_classifiers.py  test_engine.py  test_f1_turn_cost.py  test_f2_cache_miss.py  test_health_checks.py  test_matchers.py  test_models.py  test_observatory_filters.py  test_observatory_parser.py  test_observe_logger.py  test_parser.py  test_posttooluse.py  test_redact.py  test_report.py  test_router.py  test_steps.py  test_tool_categories.py  test_transcript.py
tests/e2e/: conftest.py  test_dashboard.py  test_f1_page.py  test_f2_page.py
tests/e2e/fixtures/: seed_data.py
