[project]
name = "dd-cc-setup"
version = "0.1.0"
description = "Claude Code observability and hook behaviour lab"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
observatory = [
    "streamlit>=1.30",
    "pandas>=2.0",
]
e2e = [
    "playwright>=1.40",
    "pytest-playwright>=0.4",
    "dd-cc-setup[observatory]",  # E2E tests exercise the Streamlit Observatory app
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: End-to-end browser tests (requires playwright — install with: uv sync --extra e2e)",
]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
